<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/icon_graduation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="?attr/colorOnBackground"
        android:src="@drawable/icon_work_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program_study"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/icon_graduation"
        app:layout_constraintTop_toTopOf="@+id/icon_graduation"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_job"
        app:layout_constraintTop_toBottomOf="@id/tv_job"
        app:layout_constraintStart_toEndOf="@id/icon_graduation">

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"

            android:text="@string/university"
            android:textColor="?attr/colorOnSecondary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/saparator"
            android:textColor="@color/gray"
            />
        <TextView
            android:id="@+id/work_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="9sp"
            android:text="@string/_12_may_8_july_2005"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>