<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.x01.mentorin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailMentorActivity"
            app:destination="@id/detailMentorActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.x01.mentorin.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.x01.mentorin.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.x01.mentorin.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/detailMentorActivity"
        android:name="com.x01.mentorin.ui.detailmentor.DetailMentorActivity"
        android:label="activity_detail_mentor"
        tools:layout="@layout/activity_detail_mentor" />
</navigation>