<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/type_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.TypeRegisterFragment">

    <LinearLayout
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
      >
        <ImageView
            android:layout_width="28dp"
            android:layout_height="17dp"
            android:src="@drawable/logo1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="13dp"
            android:letterSpacing="0.2"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textColor="?attr/colorOnBackground"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="19dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/register_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_register_by_email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/register_with_email"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:textSize="13dp"
        android:paddingLeft="8dp"
        android:drawableLeft="@drawable/icon_outline_email_24"
        android:drawableTint="?attr/colorOnBackground"
        android:gravity="start|center_vertical"
        android:textColor="?attr/colorOnBackground"
        android:background="@drawable/button_outline"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_register_by_google"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/register_with_google"
        android:layout_marginBottom="40dp"
        android:gravity="start|center_vertical"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:textSize="13dp"
        android:enabled="false"
        android:drawableLeft="@drawable/icon_google_24"
        android:textColor="?attr/trackColorInactive"
        android:background="@drawable/button_outline"
        app:layout_constraintTop_toBottomOf="@id/btn_register_by_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register_by_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="10sp"
            />

        <TextView
            android:id="@+id/register_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="10sp"
            android:textColor="?attr/colorPrimary"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>