<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detailmentor.DetailMentorFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        >

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <ImageView
                android:layout_width="28dp"
                android:layout_height="17dp"
                android:src="@drawable/logo1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="13dp"
                android:letterSpacing="0.2"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="?attr/colorOnBackground"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/schedule_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_schedule_24"
            app:tint="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mentor_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/image_recommend_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"

            app:layout_constraintTop_toBottomOf="@+id/schedule_icon"
            />

        <TextView
            android:id="@+id/mentor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jonas_scmedmant"
            android:textSize="19sp"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/mentor_image"
            app:layout_constraintStart_toStartOf="@id/mentor_image"
            app:layout_constraintEnd_toEndOf="@id/mentor_image"/>

        <TextView
            android:id="@+id/mentor_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senior_project_manager"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/mentor_name"
            app:layout_constraintStart_toStartOf="@id/mentor_image"
            app:layout_constraintEnd_toEndOf="@id/mentor_image"/>

        <TextView
            android:id="@+id/mentor_overview"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="15dp"
            android:text="@string/mentor_overview"
            app:layout_constraintTop_toBottomOf="@+id/mentor_job"
            app:layout_constraintStart_toStartOf="@id/mentor_image"
            app:layout_constraintEnd_toEndOf="@id/mentor_image"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_education"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/mentor_overview"
            app:layout_constraintStart_toStartOf="@id/mentor_image"
            app:layout_constraintEnd_toEndOf="@id/mentor_image"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold"
                    android:text="@string/education"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_education"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_experience"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_education"
            app:layout_constraintStart_toStartOf="@id/mentor_image"
            app:layout_constraintEnd_toEndOf="@id/mentor_image"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold"
                    android:text="@string/experience"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/booking_mentor"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="13dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_fill"
            app:layout_constraintTop_toBottomOf="@id/cv_experience"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
