<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.overview.ThirdOverviewFragment">

    <ImageView
        android:id="@+id/third_overview_icon_3d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_target_3d"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/triple_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@id/third_overview_icon_3d"
        app:layout_constraintStart_toStartOf="@id/third_overview_icon_3d"
        app:layout_constraintEnd_toEndOf="@id/third_overview_icon_3d">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="?attr/trackColorInactive"
            android:layout_marginEnd="10dp"
            />
        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="?attr/trackColorInactive"
            android:layout_marginEnd="10dp"/>
        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="?attr/trackColorActive" />
    </LinearLayout>

    <TextView
        android:id="@+id/third_overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Third_overview_title"
        android:textStyle="bold"
        android:textSize="19dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/triple_dots"
        app:layout_constraintStart_toStartOf="@id/triple_dots"
        app:layout_constraintEnd_toEndOf="@id/triple_dots"
        />

    <TextView
        android:id="@+id/third_overview_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Third_overview_desc"
        android:textSize="13dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/third_overview_title"
        app:layout_constraintStart_toStartOf="@id/third_overview_title"
        app:layout_constraintEnd_toEndOf="@id/third_overview_title"
        />

    <Button
        android:id="@+id/third_overview_btn_login"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:textSize="13dp"
        android:background="@drawable/button_fill"
        app:layout_constraintTop_toBottomOf="@id/third_overview_desc"
        app:layout_constraintStart_toStartOf="@id/third_overview_desc"
        app:layout_constraintEnd_toEndOf="@id/third_overview_desc"

        />
    <Button
        android:id="@+id/third_overview_btn_register"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/register"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        android:textSize="13dp"
        android:textColor="?attr/colorOnBackground"
        android:background="@drawable/button_outline"
        app:layout_constraintTop_toBottomOf="@id/third_overview_btn_login"
        app:layout_constraintStart_toStartOf="@id/third_overview_desc"
        app:layout_constraintEnd_toEndOf="@id/third_overview_desc"
        />
</androidx.constraintlayout.widget.ConstraintLayout>